feat: 实现全局错误拦截与日志记录系统
refactor: 重构用户管理相关接口与服务

feat(notification): 添加通知服务与相关实体类

feat(inventory): 实现药品库存变动记录功能

feat(schedule): 新增医生排班管理功能

fix: 修复JWT安全配置与拦截器问题

style: 优化前端错误处理与用户提示

docs: 更新数据库配置与应用配置

chore: 添加异步任务与操作日志切面支持

test: 完善各模块单元测试

ci: 调整安全配置与权限验证逻辑